hashmap complete